--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ group "com.incarcloud"
 version "0.1.0-SNAPSHOT"
 
 apply plugin: "java"
-apply plugin: "checkstyle"
+//apply plugin: "checkstyle"
 apply plugin: "io.freefair.lombok"
 apply plugin: "io.spring.dependency-management"
 apply plugin: "org.springframework.boot"
@@ -121,16 +121,16 @@ test {
     useJUnitPlatform()
 }
 
-task checkstyle(type: Checkstyle) {
-    configFile file("${rootDir}/config/checkstyle/checkstyle.xml")
-    ignoreFailures true
-    showViolations true
-    source = fileTree("src")
-    include "**/*.java"
-    exclude "**/test/**"
-    exclude "**/build/**"
-    classpath = files()
-}
+//task checkstyle(type: Checkstyle) {
+//    configFile file("${rootDir}/config/checkstyle/checkstyle.xml")
+//    ignoreFailures true
+//    showViolations true
+//    source = fileTree("src")
+//    include "**/*.java"
+//    exclude "**/test/**"
+//    exclude "**/build/**"
+//    classpath = files()
+//}
 
 /*task sourceJar(type: Jar) {
     from sourceSets.main.allJava
